// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Expandable open and close: closed 1`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_1" id="expandable_toggle_1" aria-expanded="false">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_1" aria-labelledby="expandable_toggle_1" aria-hidden="true" inert="">Content</div>
    </a-expandable>"
`;

exports[`Expandable open and close: opened 1`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_1" id="expandable_toggle_1" aria-expanded="true">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_1" aria-labelledby="expandable_toggle_1" aria-hidden="false">Content</div>
    </a-expandable>"
`;
